--- a/src/gui/cadastrarFuncionario.form
+++ b/src/gui/cadastrarFuncionario.form
@@ -437,18 +437,19 @@
         <Component class="javax.swing.JComboBox" name="jComboBoxFuncao">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="11">
+              <StringArray count="12">
                 <StringItem index="0" value="APOIO ADMINISTRATIVO"/>
                 <StringItem index="1" value="RH"/>
                 <StringItem index="2" value="Procon"/>
                 <StringItem index="3" value="Funape"/>
                 <StringItem index="4" value="CAS"/>
                 <StringItem index="5" value="Coordena&#xe7;&#xe3;o"/>
-                <StringItem index="6" value="Compesa"/>
-                <StringItem index="7" value="SDS"/>
-                <StringItem index="8" value="Detran"/>
-                <StringItem index="9" value="Limpeza"/>
-                <StringItem index="10" value="TI"/>
+                <StringItem index="6" value="Assistente Coordena&#xe7;&#xe3;o"/>
+                <StringItem index="7" value="Compesa"/>
+                <StringItem index="8" value="SDS"/>
+                <StringItem index="9" value="Detran"/>
+                <StringItem index="10" value="Limpeza"/>
+                <StringItem index="11" value="TI"/>
               </StringArray>
             </Property>
           </Properties>
