--- a/src/gui/configuracoes.form
+++ b/src/gui/configuracoes.form
@@ -59,6 +59,7 @@
                               <Component id="jButtonListarFuncionarios" alignment="2" min="-2" pref="203" max="-2" attributes="0"/>
                               <Component id="jButtonCadastrarFuncionario" alignment="2" min="-2" pref="203" max="-2" attributes="0"/>
                               <Component id="jButton3" alignment="2" min="-2" pref="206" max="-2" attributes="0"/>
+                              <Component id="jButton4" alignment="2" min="-2" pref="206" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="2" attributes="0">
@@ -83,7 +84,9 @@
                   <Component id="jButton2" min="-2" pref="30" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jButton3" min="-2" pref="30" max="-2" attributes="0"/>
-                  <EmptySpace pref="174" max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Component id="jButton4" min="-2" pref="30" max="-2" attributes="0"/>
+                  <EmptySpace pref="132" max="32767" attributes="0"/>
                   <Component id="jButton1" min="-2" pref="33" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -137,6 +140,14 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="jButton4">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Atualizar C&#xf3;digo de Barras"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
