--- a/src/gui/atualizarBarcodes.form
+++ b/src/gui/atualizarBarcodes.form
@@ -66,7 +66,7 @@
     <Component class="javax.swing.JComboBox" name="jComboBox2">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new DefaultComboBoxModel&lt;funcionario&gt;" type="code"/>
+          <Connection code="new DefaultComboBoxModel&lt;funcionario&gt;()" type="code"/>
         </Property>
       </Properties>
       <Events>
