--- a/src/gui/saidaAntecipada.form
+++ b/src/gui/saidaAntecipada.form
@@ -28,7 +28,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="101" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="207" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -90,12 +90,12 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Registrar Sa&#xed;da Antecipada"/>
+        <Property name="text" type="java.lang.String" value="Registrar Obs. de Hor&#xe1;rio"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Sa&#xed;da antecipada - Motivo:"/>
+        <Property name="text" type="java.lang.String" value="Motivo:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextFieldMotivo">
