--- a/src/gui/configuracoes.form
+++ b/src/gui/configuracoes.form
@@ -60,6 +60,7 @@
                               <Component id="jButtonCadastrarFuncionario" alignment="2" min="-2" pref="203" max="-2" attributes="0"/>
                               <Component id="jButton3" alignment="2" min="-2" pref="206" max="-2" attributes="0"/>
                               <Component id="jButton4" alignment="2" min="-2" pref="206" max="-2" attributes="0"/>
+                              <Component id="jButton5" alignment="2" min="-2" pref="206" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="2" attributes="0">
@@ -86,7 +87,9 @@
                   <Component id="jButton3" min="-2" pref="30" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jButton4" min="-2" pref="30" max="-2" attributes="0"/>
-                  <EmptySpace pref="132" max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Component id="jButton5" min="-2" pref="30" max="-2" attributes="0"/>
+                  <EmptySpace pref="90" max="32767" attributes="0"/>
                   <Component id="jButton1" min="-2" pref="33" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -148,6 +151,14 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="jButton5">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Criar banco de dados"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton5ActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
