--- a/src/gui/cadastrarContrato.form
+++ b/src/gui/cadastrarContrato.form
@@ -76,6 +76,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Ex.: SAD - EXPRESSO CIDADAO - CT 035/2024 - VITORIA DE ST ANTAO"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
